--- a/html/state.html
+++ b/html/state.html
@@ -670,7 +670,7 @@
 <li>That state can be rigidly divided into one of a relatively small number of distinct options.</li>
 <li>The entity responds to a series of inputs or events over time.</li>
 </ol>
-<p>In games, they are most known for being used in AI, but they are also common in implementations of user input handling, navigating menu screens parsing text, network protocols, and other asynchronous behavior.</p>
+<p>In games, they are most known for being used in AI, but they are also common in implementations of user input handling, navigating menu screens, parsing text, network protocols, and other asynchronous behavior.</p>
 <p class="footer">&copy; 2009-2013 Bob Nystrom</p>
 </div>
 </body>
